a lot of reorg; introduce composable resource-guards